collapse styles fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -229,6 +229,14 @@ p:last-child {
     line-height: 50px;
 }
 
+.ant-collapse > .ant-collapse-item.ant-collapse-item-active:last-child {
+    border-bottom: 1px solid #d9d9d9 !important;
+}
+
+span.ant-collapse-arrow {
+  display: block !important;
+}
+
 .star-icon {
     width: 16px;
     height: 16px;
